--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -5,10 +5,10 @@
             <div class="shape"></div>
             <div class="shape"></div>
         </div>
-        <form class="log-form" [formGroup]="LoginForm" (ngSubmit)="onSubmit()">
+        <form class="log-form" [formGroup]="LoginForm">
             <h3>Login Here</h3>
 
-            <label for="username">Username</label>
+            <label for="username">Your Name</label>
             <input type="text" placeholder="Your Name" id="username" formControlName="name">
 
             <label for="username">User ID</label>
@@ -18,7 +18,7 @@
             <input type="password" placeholder="Password" id="password" formControlName="password">
 
 
-            <div class="social">
+            <div class="social" (click)="onSubmit()">
               <div> LOG IN </div>
             </div>
         </form>
