--- a/src/app/modules/products/products.component.css
+++ b/src/app/modules/products/products.component.css
@@ -5,7 +5,7 @@ position: absolute;
 top: 0;
 }
 
-.addprod div{
+.addprod .need{
 height: 100%;
 }
 
@@ -17,70 +17,219 @@ height: 100%;
 
 
 
-.button-86 {
-  all: unset;
-  width: 2rem;
-  height: 3rem;
-  font-size: 16px;
-  background: transparent;
-  border: none;
-  position: relative;
-  color: #f0f0f0;
-  cursor: pointer;
-  z-index: 1;
-  padding: 10px 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  white-space: nowrap;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  border-radius: 50%;
-}
+@keyframes rotate-blob {
+  0%
+  {
+  transform: rotate(0deg);
+  }
+  100% {
+  transform: rotate(360deg)
+  }
+  }
+  @keyframes rotate-blob2 {
+  0% {
+  transform: rotate(360deg)
+  }
+  100% {
+  transform: rotate(0deg);
+  }
+  }
 
-.button-86::after,
-.button-86::before {
-  content: '';
+.blob-effect {
   position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: -99999;
-  transition: all .4s;
-}
-
-.button-86::before {
-  transform: translate(0%, 0%);
-  width: 3rem;
-  height: 3rem;
-  background: #28282d;
-  border-radius: 50%;
-}
-
-.button-86::after {
-  transform: translate(10px, 10px);
-  width: 2rem;
-  height: 2rem;
-  background: #ffffff15;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border-radius: 50%;
-}
-
-.button-86:hover::before {
-  transform: translate(5%, 20%);
+  top:1rem;
+  left:2%;
+  width: 4rem;
+  height: 4rem;
+  display: grid;
+  place-items: center;
+  font-size: 0.7rem;
+  font-weight: 900;
+  color: #e6ff6f;
+  }
+  .blob-effect span:nth-child(1) { position: absolute;
+  top: 0px;
+  left: 0px;
   width: 100%;
   height: 100%;
-}
+  border: 2px solid #4efbeba8;
+  border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+  transition: 0.5s;
+  animation: rotate-blob 5s linear infinite;
+  }
+  .blob-effect:hover span:nth-child(1) {
+  background: rgb(168 243 233 / 28%);
+  border: none;
+  }
 
-.button-86:hover::after {
+  .blob-effect span:nth-child(2) {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #4efbeba8; border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+    transition: 0.5s; animation: rotate-blob 4s linear infinite;
+    }
+    .blob-effect:hover span:nth-child(2) {
+    background: rgba(127, 241, 226, 0.28);
+    border: none;
+    }
+    .blob-effect span:nth-child(3) {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #4efbeba8;
+    border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+    transition: 0.5s;
+    animation: rotate-blob2 10s linear infinite;
+    }
+    .blob-effect:hover span:nth-child(3) {
+    background: rgba(79, 242, 220, 0.28);
+    border: none;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+.background{
+  width: 20rem;
+  height: 20rem;
+  position: absolute;
+  transform: translate(-45%,-50%);
+  left: 50%;
+  top: 50%;
+  }
+  .background .shape{
+  height: 200px;
+  width: 200px;
+  position: absolute;
   border-radius: 50%;
-  transform: translate(0, 0);
-  width: 100%;
-  height: 100%;
-}
+  backdrop-filter: blur(2rem);
+  }
+  .shape:first-child{
+  background: linear-gradient(
+    #1845ad9b,
+    #23a2f63e
+  );
+  left: -80px;
+  top: -80px;
+  }
+  .shape:last-child{
+  background: linear-gradient(
+    to right,
+    #ff522fa7,
+    #f096195e
+  );
+  right: -30px;
+  bottom: -80px;
+  }
+  form{
+    height: 520px;
+    width: 400px;
+    position: absolute;
+    transform: translate(-50%,17%);
+    left: 50%;
+    -webkit-backdrop-filter: blur(5rem);
+    padding: 5px 35px;
+  }
+  form *{
+  font-family: 'Poppins',sans-serif;
+  color: #ffffff;
+  letter-spacing: 0.5px;
+  outline: none;
+  border: none;
+  }
+  .header h3{
+    font-family: 'Poppins',sans-serif;
+    color: #ffffff;
+    letter-spacing: 0.25rem;
+    outline: none;
+    border: none;
 
-.button-86:active::after {
-  transition: 0s;
-  transform: translate(0, 5%);
-}
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 3rem;
+    text-align: right;
+  }
+  
+  label{
+  display: block;
+  margin-top: 1.5rem;
+  font-size: 0.8rem;
+  font-weight: 500;
+  }
+  input{
+  display: block;
+  height: 2.5rem;
+  width: 100%;
+  background-color: rgba(255,255,255,0.07);
+  border-radius: 3px;
+  padding: 0 10px;
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 300;
+  }
+  textarea{
+  display: block;
+  height: 5rem;
+  max-height: 8rem;
+  width: 100%;
+  background-color: rgba(255,255,255,0.07);
+  border-radius: 3px;
+  padding: 0 10px;
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 300;
+  }
+  ::placeholder{
+  color: #e5e5e5;
+  }
+  button{
+  margin-top: 50px;
+  width: 100%;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+  }
+  .social{
+  margin-top: 30px;
+  display: flex;
+  cursor: pointer;
+  }
+  .social div{
+  background: red;
+  width: 100%;
+  border-radius: 3px;
+  padding: 5px 10px 10px 5px;
+  background-color: rgba(42, 82, 195, 0.4);
+  color: #eaf0fb;
+  text-align: center;
+  }
+  .social div:hover{
+  background-color: rgba(17, 68, 179, 0.5);
+  }
+  
+  .social i{
+  margin-right: 4px;
+  }
+  
+  
