--- a/src/app/modules/products/products.component.css
+++ b/src/app/modules/products/products.component.css
@@ -5,13 +5,16 @@ position: absolute;
 top: 0;
 }
 
+
 .addprod .need{
 height: 100%;
+position: absolute;
+z-index: 1;
 }
 
 .card-body{
-  background-color: rgb(255 255 255 / 20%);
-  backdrop-filter: blur(2rem);
+  background-color: rgba(255, 255, 255, 0.11);
+  backdrop-filter: blur(16rem);
   border: 2px solid #ffffff47;
 }
 
@@ -36,7 +39,7 @@ height: 100%;
   }
 
 .blob-effect {
-  position: absolute;
+  position: relative;
   top:1rem;
   left:2%;
   width: 4rem;
@@ -46,6 +49,8 @@ height: 100%;
   font-size: 0.7rem;
   font-weight: 900;
   color: #e6ff6f;
+  margin-bottom: 5rem;
+  z-index: 2;
   }
   .blob-effect span:nth-child(1) { position: absolute;
   top: 0px;
@@ -92,20 +97,6 @@ height: 100%;
     }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
 .background{
   width: 20rem;
   height: 20rem;
@@ -166,7 +157,7 @@ height: 100%;
     line-height: 3rem;
     text-align: right;
   }
-  
+
   label{
   display: block;
   margin-top: 1.5rem;
@@ -227,9 +218,127 @@ height: 100%;
   .social div:hover{
   background-color: rgba(17, 68, 179, 0.5);
   }
-  
+
   .social i{
   margin-right: 4px;
   }
-  
-  
+
+
+
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
+body{
+  background: -webkit-linear-gradient(left, #25c481, #25b7c4);
+  background: linear-gradient(to right, #25c481, #25b7c4);
+  font-family: 'Roboto', sans-serif;
+}
+section{
+  margin: auto 50px;
+  background: #080710;
+}
+
+/* for custom scrollbar for webkit browser*/
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+}
+::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(204, 204, 204, 0.3);
+}
+
+
+
+
+
+
+
+
+
+body {
+  padding: 50px;
+  display: flex;
+  flex-flow: wrap;
+  font-family: "Ubuntu", sans-serif;
+}
+body * {
+  box-sizing: border-box;
+}
+.card-container {
+  flex: 300px;
+  margin: 30px;
+  width: 20rem;
+  height: 20rem;
+  display: inline-block;
+}
+.card-container .card {
+  font-weight: bold;
+  position: relative;
+  width: 100%;
+
+  background: #c1c1c169;
+  padding: 0.1;
+}
+.card-container .card a {
+  padding: 30px;
+  width: 100%;
+  height: 20rem;
+  border: 0.2rem solid black;
+  border-radius: 0.5rem;
+  background: rgba(255, 255, 255, 0.24);
+  text-decoration: none;
+  color: rgba(209, 209, 209, 0.452);
+  display: block;
+  transition: 0.25s ease;
+  -webkit-backdrop-filter: blur(5rem);
+}
+.card-container .card a:hover {
+  transform: translate(-30px, -30px);
+  border-color: #c5c5c57c;
+}
+.card-container .card a:hover .card--display {
+  display: none;
+}
+.card-container .card a:hover .card--hover {
+  display: block;
+}
+.card-container .card a .card--display i {
+  font-size: 60px;
+  margin-top: 200px;
+}
+.card-container .card a .card--display h2 {
+  margin: 20px 0 0;
+}
+.card-container .card a .card--hover {
+  display: none;
+}
+.card-container .card a .card--hover h2 {
+  margin: 20px 0;
+}
+.card-container .card a .card--hover p {
+  font-weight: normal;
+  line-height: 1.5;
+}
+.card-container .card a .card--hover p.link {
+  margin: 20px 0 0;
+  font-weight: bold;
+  color: #5bc0eb;
+}
+.card-container .card .card--border {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border: 2px dashed black;
+  z-index: -1;
+}
+.card-container .card.card--dark a {
+  color: white;
+  background-color: black;
+  border-color: rgb(0, 0, 0);
+}
+.card-container .card.card--dark a .card--hover .link {
+  color: #fde74c;
+}
