--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,54 +2,33 @@
     position: fixed;
     z-index: 1;
     display: none;
+    place-content: center;
 }
 .loader {
-    width: 84px;
-    height: 84px;
-    position: absolute;
-    overflow: hidden;
-    z-index: 1000;
-    top: 50%;
-    left: 50%;
-  }
-  .loader:before  {
-    content: "";
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    width:64px;
-    height: 64px;
-    border-radius: 50%;
-    background:rgb(0, 174, 255);
-    transform: translate(-50% , 100%)  scale(0);
-    animation: push 1.2s infinite ease-in;
-  }
-  .loader:after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    width:64px;
-    height: 64px;
-    border-radius: 50%;
-    background:#ff6262;
-    transform: translate(-50% , 100%)  scale(0);
-    animation: push 1.2s infinite ease-in;
-  }
-  .loader:after {
-  animation-delay: 600ms;
-  }
-  @keyframes push {
-      0% {
-        transform: translate(-50% , 100%)  scale(1);
-      }
-      15% , 25%{
-        transform: translate(-50% , 50%)  scale(1);
-      }
-    50% , 75% {
-        transform: translate(-50%, -30%) scale(0.5);
-      }
-    80%,  100% {
-        transform: translate(-50%, -50%) scale(0);
-      }
-  }
+  position: relative;
+  width:  48px;
+  height: 48px;
+  background: #01fff2;
+  transform: rotateX(65deg) rotate(45deg);
+  transform: perspective(200px) rotateX(65deg) rotate(45deg); 
+  color: #fff;
+  animation: layers1 1s linear infinite alternate;
+}
+.loader:after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: rgba(255, 255, 255, 0.7);
+  animation: layerTr 1s linear infinite alternate;
+}
+
+@keyframes layers1 {
+  0% { box-shadow: 0px 0px 0 0px  }
+ 90% , 100% { box-shadow: 20px 20px 0 -4px  }
+}
+
+@keyframes layerTr {
+  0% { transform:  translate(0, 0) scale(1) }
+  100% {  transform: translate(-25px, -25px) scale(1) }
+}
+    
