--- a/src/app/modules/products/products.component.html
+++ b/src/app/modules/products/products.component.html
@@ -38,7 +38,7 @@
 </div>
 
 
-<div class="blob-effect" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
+<div class="blob-effect" id="openedit" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
 aria-expanded="false" aria-controls="collapseWidthExample" (click)="addproducts()">
   <span></span>
   <span></span>
@@ -47,21 +47,35 @@ aria-expanded="false" aria-controls="collapseWidthExample" (click)="addproducts(
   </div>
 
 
+  <div class="row">
+
+
+
 <ng-container *ngFor="let cd of dataarray; let i = index">
-  <div class="card-container">
+  <div class="card-container col-3">
     <div class="card">
-      <a>
-        <div class="card--display"><i class="material-icons">{{cd.name}}</i>
-          <h2>Hot Tub Time Machine</h2>
+      <a (click)="editCard(cd)">
+        <div class="close" (click)="closecard(cd)">
+          <i class="fa fa-times close-icon"></i>
+        </div>
+        
+        <div class="card--display"><i class="material-icons">{{cd.category}}</i>
+          <h3>{{cd.name}}</h3>
         </div>
 
         <div class="card--hover">
-          <h2>Hot Tub Time Machine</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at est orci. Nam molestie pellentesque mi nec lacinia. Cras volutpat arcu sit amet elit sodales, nec volutpat velit bibendum.</p>
-          <p class="link">Click to see project</p>
-        </div></a>
+          <h3 style="color: #1cffd9; margin-bottom: 1rem; text-decoration: underline;">{{cd.name}}</h3>
+          <p>{{cd.description}}</p>
+          <p class="link">{{cd.cost | currency}}</p>
+          
+        </div>
+      
+        <p class="text">*Click to edit this Card</p>
+      </a>
       <div class="card--border"></div>
     </div>
   </div>
 
 </ng-container>
+
+</div>
