--- a/src/app/modules/products/products.component.css
+++ b/src/app/modules/products/products.component.css
@@ -5,6 +5,17 @@ position: absolute;
 top: 0;
 }
 
+.user{
+  position: absolute;
+  right: 10rem;
+  top: 1.8rem;
+  background: none;
+  font-size: 1.1rem;
+  font-weight: 700;
+  color: #ffffff85;
+  font-family: cursive;
+  width: 30%;
+}
 
 .addprod .need{
 height: 100%;
@@ -67,7 +78,9 @@ backdrop-filter: blur(2rem);
   }
   }
 
-.blob-effect {
+.blob-effect-1 {
+  margin-bottom: 5rem;
+  z-index: 2;
   position: relative;
   top:1rem;
   left:2%;
@@ -78,10 +91,8 @@ backdrop-filter: blur(2rem);
   font-size: 0.7rem;
   font-weight: 900;
   color: #e6ff6f;
-  margin-bottom: 5rem;
-  z-index: 2;
   }
-  .blob-effect span:nth-child(1) { position: absolute;
+  .blob-effect-1 span:nth-child(1) { position: absolute;
   top: 0px;
   left: 0px;
   width: 100%;
@@ -91,12 +102,12 @@ backdrop-filter: blur(2rem);
   transition: 0.5s;
   animation: rotate-blob 5s linear infinite;
   }
-  .blob-effect:hover span:nth-child(1) {
+  .blob-effect-1:hover span:nth-child(1) {
   background: rgb(168 243 233 / 28%);
   border: none;
   }
 
-  .blob-effect span:nth-child(2) {
+  .blob-effect-1 span:nth-child(2) {
     position: absolute;
     top: 0px;
     left: 0px;
@@ -105,11 +116,11 @@ backdrop-filter: blur(2rem);
     border: 2px solid #4efbeba8; border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
     transition: 0.5s; animation: rotate-blob 4s linear infinite;
     }
-    .blob-effect:hover span:nth-child(2) {
+    .blob-effect-1:hover span:nth-child(2) {
     background: rgba(127, 241, 226, 0.28);
     border: none;
     }
-    .blob-effect span:nth-child(3) {
+    .blob-effect-1 span:nth-child(3) {
     position: absolute;
     top: 0px;
     left: 0px;
@@ -120,8 +131,68 @@ backdrop-filter: blur(2rem);
     transition: 0.5s;
     animation: rotate-blob2 10s linear infinite;
     }
-    .blob-effect:hover span:nth-child(3) {
+    .blob-effect-1:hover span:nth-child(3) {
     background: rgba(79, 242, 220, 0.28);
+    border: none;
+    }
+
+
+    .blob-effect-2{
+      margin-bottom: 5rem;
+      z-index: 2;
+      position: absolute;
+      top:0.8rem;
+      right:2%;
+      width: 4rem;
+      height: 4rem;
+      display: grid;
+      place-items: center;
+      font-size: 0.7rem;
+      font-weight: 900;
+      color: #00ffc2;
+    }
+
+  .blob-effect-2 span:nth-child(1) { position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #fb544ea8;
+  border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+  transition: 0.5s;
+  animation: rotate-blob 5s linear infinite;
+  }
+  .blob-effect-2:hover span:nth-child(1) {
+  background: rgb(255 4 4 / 28%);
+  border: none;
+  }
+
+  .blob-effect-2 span:nth-child(2) {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #fb544ea8; border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+    transition: 0.5s; animation: rotate-blob 4s linear infinite;
+    }
+    .blob-effect-2:hover span:nth-child(2) {
+    background: rgba(240, 122, 96, 0.28);
+    border: none;
+    }
+    .blob-effect-2 span:nth-child(3) {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #fb544ea8;
+    border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+    transition: 0.5s;
+    animation: rotate-blob2 10s linear infinite;
+    }
+    .blob-effect-2:hover span:nth-child(3) {
+    background: rgba(255, 38, 0, 0.17);
     border: none;
     }
 
@@ -307,7 +378,7 @@ body * {
   width: 70%;
   float: right;
   background: #c1c1c11c;
-  margin-right: 10%;
+  margin: 10% 15%;
   border: 0.2rem solid #85a8c6bd;
 }
 .card-container .card a {
@@ -341,12 +412,14 @@ body * {
 .card-container .card a .card--display h3 {
   margin: 20px 0 0;
   color: #83f1c3;
+  font-size: 1.3rem
 }
 .card-container .card a .card--hover {
   display: none;
 }
-.card-container .card a .card--hover h2 {
+.card-container .card a .card--hover h3 {
   margin: 20px 0;
+  font-size: 1.3rem;
 }
 .card-container .card a .card--hover p {
   font-weight: normal;
